@@ -1236,9 +1236,9 @@ void FTerm::setPalette (short index, int r, int g, int b)
   else if ( linux_terminal )
   {
 /*  // direct vga-register set
-    if (  r>=0 && r<256
-       && g>=0 && g<256
-       && b>=0 && b<256 )
+    if ( r>=0 && r<256
+        && g>=0 && g<256
+        && b>=0 && b<256 )
     {
       map.d[index].red = r;
       map.d[index].green = g;
