@@ -1,3 +1,7 @@
+2017-01-15  Markus Gans  <guru.mail@muenster.de>
+	* Virtual window gets a preprocessing handler. This allows 
+	  a preprocessing method to be called before the vterm is updated.
+
 2017-01-07  Markus Gans  <guru.mail@muenster.de>
 	* Add scrollTo and scrollBy methods to FScrollView
 
